update boton acerca de en administrador

--- a/administrador.html
+++ b/administrador.html
@@ -74,6 +74,10 @@
                 <span class="btn-icon">🔗</span>
                 <span class="btn-text">Registros Vinculación</span>
             </button>
+            <button class="btn-dashboard" id="btnAcercaDe">
+                <span class="btn-icon">ℹ️</span>
+                <span class="btn-text">Acerca de</span>
+            </button>
         </div>
     </div>
 
@@ -367,6 +371,18 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Acerca de -->
+    <div class="modal-overlay" id="modalAcercaDe" style="display: none;">
+        <div class="modal-content modal-acerca-de">
+            <button class="btn-cerrar-modal" id="btnCerrarAcercaDe">×</button>
+            <h2>Acerca de</h2>
+            <div class="acerca-de-content">
+                <p class="acerca-de-linea"><span class="acerca-de-label">Desarrollado por:</span> <span class="acerca-de-valor">Emilio H. Tijerina P.</span></p>
+                <p class="acerca-de-linea"><span class="acerca-de-label">Contacto:</span> <span class="acerca-de-valor">emilio.htp1@gmail.com</span></p>
             </div>
         </div>
     </div>
